@@ -1,3 +1,4 @@
+const R = require('ramda')
 const Op = require('sequelize').Op
 const CustomerSchema = require('../../utils/sequelize').Customer
 const OrderSchema = require('../../utils/sequelize').Order
@@ -48,6 +49,45 @@ Customer.findOrdersByCustomerId = async (customerId) => {
       ItemSchema
     ]
   })
+}
+
+Customer.getCustomersInformations = async () => {
+  return CustomerSchema
+    .findAll({
+      include: [OrderSchema]
+    })
+    .then((customers) => {
+      const response = []
+
+      R.map((customer) => {
+        const obj = customer.toJSON()
+        const standardInfo = {
+          info: {}
+        }
+
+        const orders = obj.orders
+        delete obj.orders
+
+        const auxStandardInfo = {}
+        R.map((order) => {
+          if (R.is(Array, auxStandardInfo[order.priceCurrency])) {
+            auxStandardInfo[order.priceCurrency].push(order.priceAmount)
+          } else {
+            auxStandardInfo[order.priceCurrency] = [order.priceAmount]
+          }
+        }, orders)
+
+        R.mapObjIndexed((amounts, currency) => {
+          standardInfo.info[currency] = {
+            spent: R.sum(amounts)
+          }
+        })(auxStandardInfo)
+
+        response.push(Object.assign({}, obj, standardInfo))
+      })(customers)
+
+      return response
+    })
 }
 
 module.exports = Customer
