@@ -3,6 +3,7 @@ const controller = require('./customer.controller')
 
 const router = new Router()
 
+router.get('/informations', controller.getCustomersInformations)
 router.get('/:id', controller.getCustomerById)
 router.put('/:id', controller.updateCustomer)
 router.delete('/:id', controller.deleteCustomer)
